--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Book{		  martin2007appraisal,
+  author	= {Martin, J. and White, Peter R.R.},
+  pages		= {278},
+  publisher	= {Springer},
+  title		= {The Language of Evaluation: Appraisal in English},
+  year		= {2007}
+}
+
+@Book{		  hunston2011corpu,
+  author	= {Hunston, Susan},
+  pages		= {199},
+  publisher	= {Taylor and Francis},
+  title		= {Corpus Approaches to Evaluation: Phraseology and
+		  Evaluative Language},
+  year		= {2011}
+}
+
 @Article{	  abels2023sluicing,
   author	= {Abels, Klaus and Dayal, Veneeta},
   journal	= {Linguistic Inquiry},
