--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,37 @@
 
+@Article{	  mcnally2022polysemy,
+  author	= {McNally, Louise and Spalek, Alexandra Anna},
+  journal	= {Linguistics},
+  number	= {6},
+  pages		= {1943--1987},
+  title		= {Grammatically relevant aspects of meaning and verbal
+		  polysemy},
+  volume	= {60},
+  year		= {2022}
+}
+
+@InBook{	  stojanovic2022moral,
+  address	= {NY},
+  author	= {Stojanovic, Isidora and McNally, Louise},
+  booktitle	= {Experimental Philosophy of Language: Perspectives, Methods
+		  and Prospects},
+  editor	= {Bordonaba, David},
+  publisher	= {Springer},
+  title		= {Are Moral Predicates Subjective? A Corpus Study},
+  year		= {2022}
+}
+
+@Article{	  peebles2015marr,
+  author	= {Peebles, David and Cooper, Richard P.},
+  journal	= {Top Cogn Sci},
+  number	= {2},
+  pages		= {187--190},
+  title		= {Thirty Years After Marr's Vision: Levels of Analysis in
+		  Cognitive Science.},
+  volume	= {7},
+  year		= {2015}
+}
+
 @Book{		  martin2007appraisal,
   author	= {Martin, J. and White, Peter R.R.},
   pages		= {278},
