--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  marsault2023unusual,
+  author	= {Marsault, Julie},
+  journal	= {International Journal of American Linguistics},
+  number	= {3},
+  pages		= {357--390},
+  title		= {Unusual Properties of Applicative Constructions in
+		  {U}m{\'o}$^{n}$ho$^{n}$},
+  volume	= {89},
+  year		= {2023}
+}
+
 @Article{	  mcnally2022polysemy,
   author	= {McNally, Louise and Spalek, Alexandra Anna},
   journal	= {Linguistics},
