--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,48 @@
 
+@Book{		  mcginn1993probl,
+  address	= {NY},
+  author	= {McGinn, Colin},
+  pages		= {172},
+  publisher	= {Wiley-Blackwell},
+  title		= {Problems in Philosophy: The Limits of Inquiry},
+  year		= {1993}
+}
+
+@Article{	  husband2023thema,
+  author	= {Husband, E. Matthew},
+  journal	= {Language and Linguistics Compass},
+  number	= {4},
+  title		= {Thematic separation in light of sentence comprehension},
+  volume	= {17},
+  year		= {2023}
+}
+
+@Article{	  saul2017generics,
+  author	= {Saul, Jennifer},
+  journal	= {Inquiry},
+  pages		= {1--18},
+  title		= {Are generics especially pernicious},
+  year		= {2017}
+}
+
+@Article{	  craig1998relational,
+  author	= {Craig, Colette and Hale, Ken},
+  journal	= {Language},
+  number	= {2},
+  pages		= {312--344},
+  title		= {Relational Preverbs in Some Languages of the Americas:
+		  Typological and Historical Perspectives},
+  volume	= {64},
+  year		= {1988}
+}
+
+@Book{		  winter2019sensory,
+  address	= {London},
+  author	= {Winter, Bodo},
+  title		= {Sensory Linguistics: Language, Perception and Metaphor},
+  year		= {2019}
+}
+
 @Article{	  marsault2023unusual,
   author	= {Marsault, Julie},
   journal	= {International Journal of American Linguistics},
