--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,168 @@
 
+@Article{	  grosz2023emoji,
+  author	= {Grosz, Patrick Georg and Kaiser, Elsi and Pierini,
+		  Francesco},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Discourse anaphoricity vs. perspective sensitivity in
+		  emoji semantics},
+  volume	= {8},
+  year		= {2023}
+}
+
+@Article{	  rodrigues2023posse,
+  author	= {Rodrigues, Cilene},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Possessor raising and structural variations within the vP
+		  domain},
+  volume	= {8},
+  year		= {2023}
+}
+
+@Book{		  sprouse2023experimental,
+  editor	= {Sprouse, Jon},
+  pages		= {705},
+  publisher	= {Oxford University Press},
+  title		= {The Oxford Handbook of Experimental Syntax},
+  year		= {2023}
+}
+
+@Article{	  lee-schoenfeld2006dative,
+  author	= {Lee-Schoenfeld, Vera},
+  journal	= {The Journal of Comparative Germanic Linguistics},
+  number	= {2},
+  pages		= {101--142},
+  title		= {German possessor datives: raised and affected},
+  volume	= {9},
+  year		= {2006}
+}
+
+@Article{	  landau1999possessor,
+  author	= {Landau, Idan},
+  journal	= {Lingua},
+  number	= {1-2},
+  pages		= {1--37},
+  title		= {Possessor raising and the structure of VP},
+  volume	= {107},
+  year		= {1999}
+}
+
+@Article{	  demonte1988posesivo,
+  author	= {Demonte, Violeta},
+  journal	= {Nueva revista de filolog{\'i}a hisp{\'a}nica},
+  number	= {1},
+  pages		= {89--108},
+  title		= {El art{\'i}culo en lugar del posesivo y el control de los
+		  sintagmas nominales},
+  volume	= {36},
+  year		= {1988}
+}
+
+@Article{	  roldan1972dative,
+  author	= {Rold{\'a}n, Mercedes},
+  journal	= {Language Sciences},
+  pages		= {27--32},
+  title		= {Concerning Spanish Datives and Possessives},
+  volume	= {21},
+  year		= {1972}
+}
+
+@InBook{	  company2006indirecto,
+  address	= {M{\'e}xico},
+  author	= {Company Company, Concepci{\'o}n},
+  booktitle	= {Sintaxis hist{\'o}rica de la lengua espa{\~n}ola. Primera
+		  parte: la frase verbal},
+  editor	= {Company Company, Concepci{\'o}n},
+  pages		= {477-572},
+  publisher	= {FCE-UNAM},
+  title		= {El objeto indirecto},
+  year		= {2006}
+}
+
+@InBook{	  sanchez1999possessive,
+  address	= {Madrid},
+  author	= {S{\'a}nchez L{\'o}pez, Cristina},
+  booktitle	= {Cuadernos de Ling{\"u}{\'i}stica del I. U. I. Ortega y
+		  Gasset},
+  pages		= {153-173},
+  publisher	= {IUIOG},
+  title		= {The possessive dative and the syntax of affected
+		  arguments},
+  year		= {2007}
+}
+
+@Article{	  conti2011possessive,
+  author	= {Conti, Carmen},
+  journal	= {Studia Linguistica},
+  number	= {2},
+  pages		= {170--197},
+  title		= {Possessive Dative Revisited: Another View of External
+		  Possession in Spanish},
+  volume	= {65},
+  year		= {2011}
+}
+
+@Book{		  satorre1999posesivos,
+  address	= {Valencia},
+  author	= {Satorre Grau, F. Javier},
+  publisher	= {Universitat de Val{\`e}ncia},
+  title		= {Los posesivos en espa{\~n}ol},
+  volume	= {Anejo XXXV},
+  year		= {1999}
+}
+
+@Article{	  kliffer1983beyond,
+  author	= {Kliffer, Michael D.},
+  journal	= {Linguistics},
+  number	= {6},
+  title		= {Beyond syntax: Spanish inalienable possession},
+  volume	= {21},
+  year		= {1983}
+}
+
+@InBook{	  deal2017external,
+  address	= {Hoboken, NJ, USA},
+  author	= {Deal, Amy Rose},
+  booktitle	= {The Wiley Blackwell Companion to Syntax},
+  editor	= {Everaert, Martin and van Riemsdijk, Henk},
+  publisher	= {John Wiley and Sons,},
+  title		= {External Possession and Possessor Raising},
+  year		= {2017}
+}
+
+@InBook{	  picallo1999posesivo,
+  address	= {Madrid},
+  author	= {Picallo, Carme and Rigau, Gemma},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  pages		= {973-1023},
+  publisher	= {RAE Espasa},
+  title		= {El posesivo y las relaciones posesivas},
+  year		= {1999}
+}
+
+@Article{	  armstrong2021puse,
+  author	= {Armstrong, Grant},
+  journal	= {Isogloss. Open Journal of Romance Linguistics},
+  pages		= {1--28},
+  title		= {Te puse la mano en el hombro I put my hand on your
+		  shoulder: A solution to a puzzling constraint on multiple
+		  possession relations in Spanish},
+  volume	= {7},
+  year		= {2021}
+}
+
+@InBook{	  gutierrez1999dativos,
+  address	= {Madrid},
+  author	= {Guti{\'e}rrez Ord{\'o}{\~n}ez, Salvador},
+  booktitle	= {Gram{\'a}tica Descriptiva de la Lengua Espa{\~n}ola},
+  editor	= {Bosque, Ignacio and Demonte, Violeta},
+  publisher	= {RAE Espasa},
+  title		= {Los dativos},
+  year		= {1999}
+}
+
 @Book{		  mcginn1993probl,
   address	= {NY},
   author	= {McGinn, Colin},
