--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,26 @@
 
+@InBook{	  muller2020pluracionality,
+  author	= {M{\"u}ller, Ana and Sanchez‐Mendes, Luciana},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Gutzmann, Daniel and Matthewson, Lisa and Rullmann, Hotze
+		  and Zimmermann, Thomas Ede},
+  pages		= {1-34},
+  publisher	= {Wiley},
+  title		= {Pluractionality},
+  year		= {2020}
+}
+
+@InBook{	  champollion2020distributivity,
+  author	= {Champollion, Lucas},
+  booktitle	= {The Wiley Blackwell Companion to Semantics},
+  editor	= {Gutzmann, Daniel and Matthewson, Lisa and Rullmann, Hotze
+		  and Zimmermann, Thomas Ede},
+  pages		= {1-38},
+  publisher	= {Wiley},
+  title		= {Distributivity, Collectivity, and Cumulativity},
+  year		= {2020}
+}
+
 @Article{	  grosz2023emoji,
   author	= {Grosz, Patrick Georg and Kaiser, Elsi and Pierini,
 		  Francesco},
