--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,24 @@
 
+@Article{	  gil1996collective,
+  author	= {Gil, David},
+  journal	= {Rivista di Linguistica},
+  number	= {1},
+  pages		= {53--87},
+  title		= {Maltese collective nouns: a typological perspective},
+  volume	= {8},
+  year		= {1996}
+}
+
+@InBook{	  champollion2016mereology,
+  author	= {Champollion, Lucas and Krifka, Manfred},
+  booktitle	= {The Cambridge Handbook of Formal Semantics},
+  editor	= {Aloni, Maria and Dekker, Paul},
+  pages		= {369-388},
+  publisher	= {Cambridge University Press},
+  title		= {Mereology},
+  year		= {2016}
+}
+
 @InBook{	  muller2020pluracionality,
   author	= {M{\"u}ller, Ana and Sanchez‐Mendes, Luciana},
   booktitle	= {The Wiley Blackwell Companion to Semantics},
