--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Book{		  james2013intro,
+  address	= {New York, NY},
+  author	= {James, Gareth and Witten, Daniela and Hastie, Trevor and
+		  Tibshirani, Robert},
+  publisher	= {Springer New York},
+  title		= {An Introduction to Statistical Learning},
+  year		= {2013}
+}
+
+@Book{		  downey2014stats,
+  address	= {Sebastopol, CA},
+  author	= {Downey, Allen},
+  publisher	= {O'Reilly Media},
+  title		= {Think stats},
+  year		= {2014}
+}
+
 @Article{	  gil1996collective,
   author	= {Gil, David},
   journal	= {Rivista di Linguistica},
