--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,21 @@
 
+@Article{	  hara2023daroo,
+  author	= {Hara, Yurie},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Daroo ka: the interplay of deictic modality, sentence
+		  type, prosody and tier of meaning},
+  year		= {2023}
+}
+
+@Book{		  rouveret2023nonfinite,
+  author	= {Rouveret, Alain},
+  pages		= {554},
+  publisher	= {Walter de Gruyter},
+  title		= {Nonfinite Inquiries: Materials for a Comparative Study of
+		  Nonfinite Predicative Domains},
+  year		= {2023}
+}
+
 @Book{		  james2013intro,
   address	= {New York, NY},
   author	= {James, Gareth and Witten, Daniela and Hastie, Trevor and
