--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,82 @@
 
+@Article{	  gumiel-molina2023persp,
+  author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
+		  P{\'e}rez-Jim{\'e}nez, Isabel},
+  journal	= {Spanish in Context},
+  title		= {Perspectivized estar-sentences with aesthetic adjectives
+		  across American Spanish varieties},
+  year		= {2023}
+}
+
+@PhDThesis{	  perlmutter1968constraints,
+  address	= {Cambridge, Mass.},
+  author	= {Perlmutter, David M.},
+  school	= {MIT},
+  title		= {Deep and Surface Constraints in Syntax},
+  year		= {1968}
+}
+
+@PhDThesis{	  krejci2012ingestive,
+  address	= {Austin, Texas},
+  author	= {Krejci, Bonnie J.},
+  school	= {University of Texas at Austin},
+  title		= {Causativization as Antireflexivization: A Study of Middle
+		  and Ingestive Verbs},
+  year		= {2012}
+}
+
+@PhDThesis{	  bonet1991clitics,
+  address	= {Cambridge, Mass.},
+  author	= {Bonet, Eul{\`a}lia},
+  school	= {MIT},
+  title		= {Morphology after syntax: pronominal clitics in Romance},
+  year		= {1991}
+}
+
+@PhDThesis{	  masullo1992incorporation,
+  author	= {Masullo, Pascual},
+  school	= {University of Washington},
+  title		= {Incorporation and Case Theory in Spanish: A
+		  crosslinguistic perspective},
+  year		= {1992}
+}
+
+@Article{	  preminger2009clitic,
+  author	= {Preminger, Omer},
+  journal	= {Linguistic Inquiry},
+  number	= {4},
+  pages		= {619--666},
+  title		= {Breaking Agreements: Distinguishing Agreement and Clitic
+		  Doubling by Their Failures},
+  volume	= {40},
+  year		= {2009}
+}
+
+@Book{		  mcnally2022readers,
+  author	= {McNally, Louise and Szab{\'o}, Zolt{\'a}n G.},
+  editor	= {McNally, Louise and Szab{\'o}, Zolt{\'a}n G.},
+  publisher	= {Springer},
+  title		= {A Reader's Guide to Classic Papers in Formal Semantics},
+  year		= {2022}
+}
+
+@Article{	  marcolli2023old,
+  author	= {Marcolli, Matilde and Chomsky, Noam and Berwick, Robert
+		  C.},
+  title		= {Old and New Minimalism: a Hopf algebra comparison},
+  year		= {2023}
+}
+
+@Book{		  heunen2013quantum,
+  editor	= {Heunen, Chris and Sadrzadeh, Mehrnoosh and Grefenstette,
+		  Edward},
+  pages		= {430},
+  publisher	= {Oxford University Press},
+  title		= {Quantum Physics and Linguistics: A Compositional,
+		  Diagrammatic Discourse},
+  year		= {2013}
+}
+
 @Article{	  hara2023daroo,
   author	= {Hara, Yurie},
   journal	= {Natural Language and Linguistic Theory},
