--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,219 @@
 
+@Article{	  booth2023desires,
+  author	= {Booth, Richard Jefferson},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {1131--1160},
+  title		= {Underspecifying desires},
+  volume	= {46},
+  year		= {2023}
+}
+
+@Article{	  kroll2023split,
+  author	= {Kroll, Nicky},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {1051--1074},
+  title		= {Splitting situations},
+  volume	= {46},
+  year		= {2023}
+}
+
+@Article{	  egre2023around,
+  author	= {{\'E}gr{\'e}, Paul and Spector, Benjamin and Mortier,
+		  Ad{\`e}le and Verheyen, Steven},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {1075--1130},
+  title		= {On the optimality of vagueness: around, between and the
+		  Gricean maxims},
+  volume	= {46},
+  year		= {2023}
+}
+
+@Article{	  ruys2023pronoun,
+  author	= {Ruys, E. G.},
+  journal	= {Linguistics and Philosophy},
+  number	= {5},
+  pages		= {1027--1050},
+  title		= {Not every pronoun is always a pronoun},
+  volume	= {46},
+  year		= {2023}
+}
+
+@Article{	  sawada2023scalarity,
+  author	= {Sawada, Osamu},
+  journal	= {Natural Language Semantics},
+  number	= {2-3},
+  pages		= {71--120},
+  title		= {Scalarity of the Japanese initial mora-based minimizer: a
+		  compositional (lexically unspecified) minimizer and a
+		  non-compositional (lexically specified) minimizer},
+  volume	= {31},
+  year		= {2023}
+}
+
+@Article{	  alxatib2023exhaust,
+  author	= {Alxatib, Sam},
+  journal	= {Natural Language Semantics},
+  title		= {Remarks on exhaustification and embedded free choice},
+  year		= {2023}
+}
+
+@Article{	  hewett2022allom,
+  author	= {Hewett, Matthew},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Allomorphy in Semitic discontinuous agreement: Evidence
+		  for a modular approach to postsyntax},
+  year		= {2022}
+}
+
+@Article{	  grosz203emoji,
+  author	= {Grosz, Patrick Georg and Greenberg, Gabriel and De Leon,
+		  Christian and Kaiser, Elsi},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {905--957},
+  title		= {A semantics of face emoji in discourse},
+  volume	= {46},
+  year		= {2023}
+}
+
+@Article{	  esipova2023reps,
+  author	= {Esipova, Maria},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {871--904},
+  title		= {Reps and representations: a warm-up to a grammar of
+		  lifting},
+  volume	= {46},
+  year		= {2023}
+}
+
+@Article{	  matchin2023syntax,
+  author	= {Matchin, William and Hickok, Gregory},
+  journal	= {Cerebral Cortex},
+  number	= {3},
+  pages		= {1481--1498},
+  title		= {The Cortical Organization of Syntax},
+  volume	= {30},
+  year		= {2020}
+}
+
+@Article{	  matchin2023lexic,
+  author	= {Matchin, William},
+  journal	= {Frontiers in Language Sciences},
+  title		= {Lexico-semantics obscures lexical syntax},
+  volume	= {2},
+  year		= {2023}
+}
+
+@Article{	  ross2023constraints,
+  author	= {Ross, Lauren N.},
+  journal	= {Synthese},
+  number	= {2},
+  title		= {The explanatory nature of constraints: Law-based,
+		  mathematical, and causal},
+  volume	= {202},
+  year		= {2023}
+}
+
+@Article{	  moro2023large,
+  author	= {Moro, Andrea and Greco, Matteo and Cappa, Stefano},
+  journal	= {Cortex},
+  pages		= {82--85},
+  title		= {Large languages, impossible languages and human brains.},
+  volume	= {167},
+  year		= {2023}
+}
+
+@Article{	  vonfintel2023xmarking,
+  author	= {Von Fintel, Kai and Iatridou, Sabine},
+  journal	= {Linguistics and Philosophy},
+  title		= {Prolegomena to a theory of X-marking},
+  year		= {2023}
+}
+
+@Article{	  knowlton2023psycho,
+  author	= {Knowlton, Tyler and Pietroski, Paul and Williams,
+		  Alexander and Halberda, Justin and Lidz, Jeffrey},
+  journal	= {Natural Language Semantics},
+  title		= {Psycholinguistic evidence for restricted quantification},
+  year		= {2023}
+}
+
+@Article{	  lai2023moving,
+  author	= {Lai, Jackie Yan-Ki and Li, Haoming},
+  journal	= {Natural Language and Linguistic Theory},
+  title		= {Moving heads to specifiers: Evidence from Mandarin
+		  multiple pre-subject modals},
+  year		= {2023}
+}
+
+@Article{	  raffman2005contextualism,
+  author	= {Raffman, Diana},
+  journal	= {Analysis},
+  number	= {3},
+  pages		= {244--248},
+  title		= {How to understand contextualism about vagueness: reply to
+		  Stanley},
+  volume	= {65},
+  year		= {2005}
+}
+
+@Article{	  gobel2023atleast,
+  author	= {G{\"o}bel, Alexander and Wagner, Michael},
+  journal	= {Glossa: a journal of general linguistics},
+  title		= {How the position of at least affects its interpretation:
+		  experimental data},
+  year		= {2023}
+}
+
+@Article{	  sundell2016tasty,
+  author	= {Sundell, Tim},
+  journal	= {Inquiry},
+  number	= {6},
+  pages		= {793--818},
+  title		= {The tasty, the bold, and the beautiful},
+  volume	= {59},
+  year		= {2016}
+}
+
+@Article{	  bellerzaroukian2019like,
+  author	= {Beller, Charles and Zaroukian, Erin},
+  journal	= {Proceedings of Sinn und Bedeutung},
+  number	= {1},
+  pages		= {71--86},
+  title		= {Stage-level evaluativity is desiderativity},
+  volume	= {16},
+  year		= {2019}
+}
+
+@InBook{	  alexandropoulou2022incre,
+  author	= {Alexandropoulou, Stavroula and Discher, Henrik and Herb,
+		  Marisha and Gotzner, Nicole},
+  booktitle	= {Proceedings of SALT 32},
+  editor	= {Starr, John R. and Kim, Juhyae and {\"O}ney, Burak},
+  pages		= {481},
+  publisher	= {Linguistic Society of America},
+  title		= {Incremental pragmatic interpretation of gradable
+		  adjectives: The role of standards of comparison},
+  year		= {2022}
+}
+
+@InBook{	  gotzner2022brilliant,
+  address	= {Cham},
+  author	= {Gotzner, Nicole and Kiziltan, Sybille},
+  booktitle	= {Measurements, Numerals and Scales: Essays in Honour of
+		  Stephanie Solt},
+  editor	= {Gotzner, Nicole and Sauerland, Uli},
+  pages		= {117-134},
+  publisher	= {Springer International Publishing},
+  title		= {She is Brilliant! Distinguishing Different Readings of
+		  Relative Adjectives},
+  year		= {2022}
+}
+
 @Article{	  gumiel-molina2023persp,
   author	= {Gumiel-Molina, Silvia and Moreno-Quib{\'e}n, Norberto and
 		  P{\'e}rez-Jim{\'e}nez, Isabel},
