--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,43 @@
 
+@Article{	  hartman2011intervention,
+  author	= {Hartman, Jeremy},
+  journal	= {Linguistic Variation},
+  number	= {2},
+  pages		= {121--148},
+  title		= {(Non-)intervention in A-movement},
+  volume	= {11},
+  year		= {2011}
+}
+
+@Article{	  hartmann2011ellipsis,
+  author	= {Hartman, Jeremy},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {367--388},
+  title		= {The Semantic Uniformity of Traces: Evidence from Ellipsis
+		  Parallelism},
+  volume	= {42},
+  year		= {2011}
+}
+
+@Article{	  nevins2011adjectives,
+  author	= {Nevins, Andrew},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {339--345},
+  title		= {Convergent Evidence for Rolling Up Catalan Adjectives},
+  volume	= {42},
+  year		= {2011}
+}
+
+@Book{		  smith2013godel,
+  address	= {Cambridge},
+  author	= {Smith, Peter},
+  publisher	= {Cambridge University Press},
+  title		= {An Introduction to G{\"o}del's Theorems},
+  year		= {2013}
+}
+
 @Article{	  booth2023desires,
   author	= {Booth, Richard Jefferson},
   journal	= {Linguistics and Philosophy},
