--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  frana2023evidential,
+  author	= {Frana, Ilaria and Men{\'e}ndez-Benito, Paula},
+  journal	= {Natural Language Semantics},
+  number	= {2-3},
+  pages		= {139--178},
+  title		= {The evidential future in Italian},
+  volume	= {31},
+  year		= {2023}
+}
+
 @Article{	  hartman2011intervention,
   author	= {Hartman, Jeremy},
   journal	= {Linguistic Variation},
