--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -926,7 +926,9 @@
 @Article{	  collins2023negating,
   author	= {Collins, Chris},
   journal	= {Natural Language Semantics},
+  number	= {2-3},
   title		= {Negating gradable adjectives},
+  volume	= {31},
   year		= {2023}
 }
 
