--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,62 @@
 
+@Article{	  zribi-hertz1982semoyen,
+  author	= {Zribi-Hertz, Anne},
+  journal	= {Lingvistic{\ae} Investigationes. International Journal of
+		  Linguistics and Language Resources},
+  number	= {2},
+  pages		= {345--401},
+  title		= {La Construction Se-Moyen Du Fran{\c c}ais Et Son Statut
+		  Dans Le Triangle moyen-passif-r{\'e}fl{\'e}chi},
+  volume	= {6},
+  year		= {1982}
+}
+
+@Article{	  tayalati2004indif,
+  author	= {Tayalati, Fayssal},
+  journal	= {Travaux de linguistique},
+  number	= {1},
+  pages		= {77--94},
+  title		= {Indiff{\'e}rent: un adjectif psychologique {\`a} part},
+  volume	= {48},
+  year		= {2004}
+}
+
+@Article{	  tayalati2020tough,
+  author	= {Tayalati, Fayssal and Mostrov, Vassil and Van de Velde,
+		  Dani{\`e}le},
+  journal	= {Langages},
+  number	= {2},
+  pages		= {7--16},
+  title		= {Les constructions Tough: syntaxe, s{\'e}mantique et
+		  interfaces. Pr{\'e}sentation},
+  volume	= {218},
+  year		= {2020}
+}
+
+@Article{	  paykin2013adjectifs,
+  author	= {Paykin, Katia and Tayalati, Fayssal and Van de Velde,
+		  Dani{\`e}le},
+  journal	= {Lingvistic{\ae} Investigationes. International Journal of
+		  Linguistics and Language Resources},
+  number	= {1},
+  pages		= {20--55},
+  title		= {Adjectifs d'{\'e}valuation de comportement},
+  volume	= {36},
+  year		= {2013}
+}
+
+@Article{	  talayati2008datifs,
+  author	= {Tayalati, Fayssal},
+  journal	= {Le Fran{\c c}ais Moderne - Revue de linguistique Fran{\c
+		  c}aise},
+  number	= {2},
+  pages		= {159--181.},
+  title		= {Les pr{\'e}dicats de relations pr{\'e}dicatives {\`a}
+		  propos de quelques adjectifs datifs.},
+  volume	= {76},
+  year		= {2008}
+}
+
 @Article{	  frana2023evidential,
   author	= {Frana, Ilaria and Men{\'e}ndez-Benito, Paula},
   journal	= {Natural Language Semantics},
