--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Article{	  trinh2023stren,
+  author	= {Trinh, Tue},
+  journal	= {Linguistics and Philosophy},
+  title		= {Strengthened, and weakened, by belief},
+  year		= {2023}
+}
+
+@Article{	  curzan2023langu,
+  author	= {Curzan, Anne and Queen, Robin M. and VanEyk, Kristin and
+		  Weissler, Rachel Elizabeth},
+  journal	= {Daedalus},
+  number	= {3},
+  pages		= {18--35},
+  title		= {Language Standardization and Linguistic Subordination},
+  volume	= {152},
+  year		= {2023}
+}
+
+@Article{	  isasi-isasmendi2023agent,
+  author	= {Isasi-Isasmendi, A. and Andrews, C. and Flecken, M. and
+		  Laka, I. and Daum, M. M. and Meyer, M. and Bickel, B. and
+		  Sauppe, S.},
+  journal	= {Open Mind (Camb)},
+  pages		= {240--282},
+  title		= {The Agent Preference in Visual Event Apprehension},
+  volume	= {7},
+  year		= {2023}
+}
+
 @Article{	  zribi-hertz1982semoyen,
   author	= {Zribi-Hertz, Anne},
   journal	= {Lingvistic{\ae} Investigationes. International Journal of
