--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@Article{	  brasoveanu2018evalu,
+  author	= {Brasoveanu, Adrian and Rett, Jessica},
+  journal	= {Journal of Linguistics},
+  number	= {2},
+  pages		= {263--329},
+  title		= {Evaluativity across adjective and construction types: An
+		  experimental study},
+  volume	= {54},
+  year		= {2018}
+}
+
 @Article{	  trinh2023stren,
   author	= {Trinh, Tue},
   journal	= {Linguistics and Philosophy},
