--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  paradis2001adjectives,
+  author	= {Paradis, Carita},
+  journal	= {Cognitive Linguistics},
+  number	= {1},
+  title		= {Adjectives and boundedness},
+  volume	= {12},
+  year		= {2001}
+}
+
 @Article{	  brasoveanu2018evalu,
   author	= {Brasoveanu, Adrian and Rett, Jessica},
   journal	= {Journal of Linguistics},
