--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Book{		  hartmann2000right,
+  author	= {Hartmann, Katharina},
+  pages		= {190},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {Right Node Raising and Gapping: Interface Conditions on
+		  Prosodic Deletion},
+  year		= {2000}
+}
+
 @Article{	  paradis2001adjectives,
   author	= {Paradis, Carita},
   journal	= {Cognitive Linguistics},
