--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,150 @@
 
+@Book{		  bricmont2010chomsky,
+  address	= {New York},
+  editor	= {Bricmont, Jean and Franck, Julie},
+  pages		= {351},
+  publisher	= {Columbia University Press},
+  title		= {Chomsky Notebook},
+  year		= {2010}
+}
+
+@PhDThesis{	  bondarenko2022anatomy,
+  address	= {Cambridge, Mass.},
+  author	= {Bondarenko, Tatiana Igoreva},
+  school	= {MIT},
+  title		= {Anatomy of an Attitude},
+  year		= {2022}
+}
+
+@InBook{	  marantz2007phases,
+  address	= {Seoul},
+  author	= {Marantz, Alec},
+  editor	= {Choe, S.H},
+  pages		= {191-222},
+  publisher	= {Dong-In Publishing Co.},
+  title		= {Phases and words Phases in the theory of grammar},
+  year		= {2007}
+}
+
+@Book{		  rouveret1998etre,
+  address	= {Saint-Denis, Paris},
+  author	= {Rouveret, Alain},
+  publisher	= {Presses universitaires de Vincennes},
+  title		= {``{\^E}tre'' et ``avoir'': syntaxe, s{\'e}mantique,
+		  typologie},
+  year		= {1998}
+}
+
+@Book{		  whitley1986contrast,
+  address	= {Washington, D.C},
+  author	= {Whitley, Melvin Stanley},
+  publisher	= {Georgetown University Press},
+  title		= {Spanish-English contrasts: a course in Spanish
+		  linguistics},
+  year		= {1986}
+}
+
+@Book{		  lavid2010systemic,
+  address	= {London :; New York},
+  author	= {Lavid, Julia and Ar{\'u}s, Jorge and Zamorano-Mansila,
+		  Juan Rafael},
+  publisher	= {Continuum},
+  title		= {Systemic functional grammar of Spanish: a contrastive
+		  study with English},
+  year		= {2010}
+}
+
+@InBook{	  dominguez2018information,
+  author	= {Dom{\'i}nguez, Laura},
+  booktitle	= {The Cambridge Handbook of Spanish Linguistics},
+  editor	= {Geeslin, Kimberly L.},
+  publisher	= {Cambridge University Press},
+  title		= {Information Structure},
+  year		= {2018}
+}
+
+@InBook{	  lopez2016informacion,
+  address	= {Milton Park, Abingdon, Oxon; New York, NY},
+  author	= {L{\'o}pez, Luis},
+  booktitle	= {Enciclopedia de Ling{\"u}{\'i}stica Hisp{\'a}nica},
+  editor	= {Guti{\'e}rrez-Rexach, Javier},
+  publisher	= {Routledge},
+  title		= {Estructura de la informaci{\'o}n},
+  year		= {2016}
+}
+
+@InBook{	  morenocabrera2016univer,
+  address	= {Milton Park, Abingdon, Oxon; New York, NY},
+  author	= {Moreno Cabrera, Juan Carlos},
+  booktitle	= {Enciclopedia de Ling{\"u}{\'i}stica Hisp{\'a}nica},
+  editor	= {Guti{\'e}rrez-Rexach, Javier},
+  publisher	= {Routledge},
+  title		= {Universales y lenguas se{\~n}adas},
+  year		= {2016}
+}
+
+@InBook{	  morenocabrera2016tipologia,
+  address	= {Milton Park, Abingdon, Oxon; New York, NY},
+  author	= {Moreno Cabrera, Juan Carlos},
+  booktitle	= {Enciclopedia de Ling{\"u}{\'i}stica Hisp{\'a}nica},
+  editor	= {Guti{\'e}rrez-Rexach, Javier},
+  publisher	= {Routledge},
+  title		= {Tipolog{\'i}a ling{\"u}{\'i}stica},
+  year		= {2016}
+}
+
+@InBook{	  albadalejo2016traduccion,
+  address	= {Milton Park, Abingdon, Oxon; New York, NY},
+  author	= {Albadalejo Mart{\'i}nez, Juan Antonio},
+  booktitle	= {Enciclopedia de Ling{\"u}{\'i}stica Hisp{\'a}nica},
+  editor	= {Guti{\'e}rrez-Rexach, Javier},
+  publisher	= {Routledge},
+  title		= {Traducci{\'o}n e interpretaci{\'o}n},
+  year		= {2016}
+}
+
+@Article{	  leonetti2011info,
+  author	= {Leonetti, Manuel},
+  journal	= {Romanistisches Jahrbuch},
+  number	= {1},
+  pages		= {338--355},
+  title		= {La expresi{\'o}n de la estructura informativa en la
+		  sintaxis: un par{\'a}metro de variaci{\'o}n en las lenguas
+		  rom{\'a}nicas},
+  volume	= {61},
+  year		= {2011}
+}
+
+@Article{	  grosz2015movem,
+  author	= {Grosz, Patrick G.},
+  journal	= {Syntax},
+  number	= {1},
+  pages		= {1--38},
+  title		= {Movement and Agreement in Right-Node-Raising
+		  Constructions},
+  volume	= {18},
+  year		= {2015}
+}
+
+@Article{	  wilder1999rightnode,
+  author	= {Wilder, Chris},
+  journal	= {WCCFL},
+  title		= {Right Node Rising and the LCA},
+  volume	= {18},
+  year		= {1999}
+}
+
+@Article{	  larson2011problems,
+  author	= {Larson, Bradley},
+  journal	= {Linguistic Inquiry},
+  number	= {1},
+  pages		= {163--171},
+  title		= {Problems with a Movement Analysis of Right Node Raising in
+		  Tagalog},
+  volume	= {42},
+  year		= {2011}
+}
+
 @Book{		  hartmann2000right,
   author	= {Hartmann, Katharina},
   pages		= {190},
