--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,26 @@
 
+@Article{	  chomsky1956three,
+  author	= {Chomsky, Noam},
+  journal	= {IEEE Transactions on Information Theory},
+  number	= {3},
+  pages		= {113--124},
+  title		= {Three models for the description of language},
+  volume	= {2},
+  year		= {1956}
+}
+
+@Article{	  dehaene2015neural,
+  author	= {Dehaene, Stanislas and Meyniel, Florent and Wacongne,
+		  Catherine and Wang, Liping and Pallier, Christophe},
+  journal	= {Neuron},
+  number	= {1},
+  pages		= {2--19},
+  title		= {The Neural Representation of Sequences: From Transition
+		  Probabilities to Algebraic Patterns and Linguistic Trees.},
+  volume	= {88},
+  year		= {2015}
+}
+
 @Book{		  bricmont2010chomsky,
   address	= {New York},
   editor	= {Bricmont, Jean and Franck, Julie},
