--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  myers2009design,
+  author	= {Myers, James},
+  journal	= {Lingua},
+  number	= {3},
+  pages		= {425--444},
+  title		= {The design and analysis of small-scale syntactic judgment
+		  experiments},
+  volume	= {119},
+  year		= {2009}
+}
+
+@Book{		  podesva2014research,
+  address	= {London},
+  editor	= {Podesva, Robert J. and Sharma, Devyani},
+  publisher	= {Cambridge University Press},
+  title		= {Research Methods in Linguistics},
+  year		= {2014}
+}
+
 @Article{	  chomsky1956three,
   author	= {Chomsky, Noam},
   journal	= {IEEE Transactions on Information Theory},
