--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,151 @@
 
+@Article{	  irurtzun2009sobre,
+  author	= {Irurtzun, Aritz},
+  journal	= {Catalan Journal of Linguistics},
+  number	= {1},
+  pages		= {141},
+  title		= {Per qu{\`e} Y? Sobre la centralitat de la sintaxi a
+		  l'arquitectura de la gram{\`a}tica},
+  volume	= {8},
+  year		= {2009}
+}
+
+@Article{	  irurtzun2019dessi,
+  author	= {Irurtzun, Aritz},
+  journal	= {Catalan Journal of Linguistics},
+  pages		= {165},
+  title		= {Dessintactitzar la sintaxi? Preocupacions sobre
+		  l'arquitectura de la gram{\`a}tica i el paper dels
+		  components d'interf{\'i}cie},
+  year		= {2019}
+}
+
+@Article{	  torrego1988exclam,
+  author	= {Torrego, Esther},
+  journal	= {Nueva Revista de Filolog{\'i}a Hisp{\'a}nica},
+  number	= {1},
+  pages		= {109--122},
+  title		= {Operadores en las exclamativas con art{\'i}culo
+		  determinado de valor cuantitativo},
+  volume	= {36},
+  year		= {1988}
+}
+
+@Article{	  torrego1996float,
+  author	= {Torrego, Esther},
+  journal	= {Linguistic inquiry},
+  number	= {1},
+  pages		= {111--126},
+  title		= {On Quantifier Float in Control Clauses},
+  volume	= {27},
+  year		= {1996}
+}
+
+@Article{	  hale1996ug,
+  author	= {Hale, Ken},
+  journal	= {Behavioral and Brain Sciences},
+  number	= {4},
+  pages		= {728--730},
+  title		= {Can UG and L1 be distinguished in L2 acquisition},
+  volume	= {19},
+  year		= {1996}
+}
+
+@Article{	  odden2022radical,
+  author	= {Odden, David},
+  journal	= {Canadian Journal of Linguistics/Revue canadienne de
+		  linguistique},
+  number	= {4},
+  pages		= {500--551},
+  title		= {Radical substance-free phonology and feature learning},
+  volume	= {67},
+  year		= {2022}
+}
+
+@Article{	  reiss2022conquer,
+  author	= {Reiss, Charles and Volenec, Veno},
+  journal	= {Canadian Journal of Linguistics/Revue canadienne de
+		  linguistique},
+  number	= {4},
+  pages		= {581--610},
+  title		= {Conquer primal fear: Phonological features are innate and
+		  substance-free},
+  volume	= {67},
+  year		= {2022}
+}
+
+@InBook{	  leonetti2021preguntas,
+  address	= {Madrid},
+  author	= {Leonetti, Manuel and Escandell-Vidal, Mar{\'i}a Victoria},
+  booktitle	= {La estructura informativa},
+  editor	= {Leonetti, Manuel and Escandell-Vidal, Mar{\'i}a Victoria},
+  pages		= {15-181},
+  publisher	= {Visor},
+  title		= {La estructura informativa. Preguntas frecuentes},
+  year		= {2021}
+}
+
+@Book{		  leonetti2021estru,
+  address	= {Madrid},
+  editor	= {Leonetti, Manuel and Escandell-Vidal, Mar{\'i}a Victoria},
+  pages		= {472},
+  publisher	= {Visor},
+  title		= {La estructura informativa},
+  year		= {2021}
+}
+
+@Article{	  lasnik2002minim,
+  author	= {Lasnik, Howard},
+  journal	= {Trends Cogn Sci},
+  number	= {10},
+  pages		= {432--437},
+  title		= {The minimalist program in syntax},
+  volume	= {6},
+  year		= {2002}
+}
+
+@Article{	  philips2003experimental,
+  author	= {Philips, Colin and Lasnik, Howard},
+  journal	= {Trends Cogn Sci},
+  number	= {2},
+  pages		= {61--62},
+  title		= {Linguistics and empirical evidence},
+  volume	= {7},
+  year		= {2003}
+}
+
+@Article{	  wasow2005intuitions,
+  author	= {Wasow, Thomas and Arnold, Jennifer},
+  journal	= {Lingua},
+  number	= {11},
+  pages		= {1481--1496},
+  title		= {Intuitions in linguistic argumentation},
+  volume	= {115},
+  year		= {2005}
+}
+
+@InBook{	  bach1982purpose,
+  address	= {Dordrecht},
+  author	= {Bach, Emmon},
+  booktitle	= {The Nature of Syntactic Representation},
+  editor	= {Jacobson, Pauline and Pullum, Geoffrey K.},
+  pages		= {35-57},
+  publisher	= {Springer Netherlands},
+  title		= {Purpose Clauses and Control},
+  year		= {1982}
+}
+
+@InBook{	  jacobson1982gaps,
+  address	= {Dordrecht},
+  author	= {Jacobson, Pauline},
+  booktitle	= {The Nature of Syntactic Representation},
+  editor	= {Jacobson, Pauline and Pullum, Geoffrey K.},
+  pages		= {187-228},
+  publisher	= {Springer Netherlands},
+  title		= {Evidence for Gaps},
+  year		= {1982}
+}
+
 @Article{	  myers2009design,
   author	= {Myers, James},
   journal	= {Lingua},
